--- a/beatthebookies/notebooks/george_explore.ipynb
+++ b/beatthebookies/notebooks/george_explore.ipynb
@@ -928,32 +928,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['id', 'season', 'stage', 'date', 'home_team', 'away_team',\n",
-       "       'home_team_goal', 'away_team_goal', 'home_w', 'away_w', 'draw',\n",
-       "       'home_t_home_goals', 'home_t_total_goals',\n",
-       "       'home_t_home_goals_against', 'home_t_total_goals_against',\n",
-       "       'home_t_home_wins', 'home_t_home_losses', 'home_t_home_draws',\n",
-       "       'home_t_total_wins', 'home_t_total_losses', 'home_t_total_draws',\n",
-       "       'away_t_away_goals', 'away_t_total_goals',\n",
-       "       'away_t_away_goals_against', 'away_t_total_goals_against',\n",
-       "       'away_t_away_wins', 'away_t_away_losses', 'away_t_away_draws',\n",
-       "       'away_t_total_wins', 'away_t_total_losses', 'away_t_total_draws'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 380 entries, 1 to 313\n",
+      "Data columns (total 31 columns):\n",
+      "id                            380 non-null int64\n",
+      "season                        380 non-null object\n",
+      "stage                         380 non-null int64\n",
+      "date                          380 non-null object\n",
+      "home_team                     380 non-null object\n",
+      "away_team                     380 non-null object\n",
+      "home_team_goal                380 non-null int64\n",
+      "away_team_goal                380 non-null int64\n",
+      "home_w                        380 non-null int64\n",
+      "away_w                        380 non-null int64\n",
+      "draw                          380 non-null int64\n",
+      "home_t_home_goals             380 non-null int64\n",
+      "home_t_total_goals            380 non-null int64\n",
+      "home_t_home_goals_against     380 non-null int64\n",
+      "home_t_total_goals_against    380 non-null int64\n",
+      "home_t_home_wins              380 non-null int64\n",
+      "home_t_home_losses            380 non-null int64\n",
+      "home_t_home_draws             380 non-null int64\n",
+      "home_t_total_wins             380 non-null int64\n",
+      "home_t_total_losses           380 non-null int64\n",
+      "home_t_total_draws            380 non-null int64\n",
+      "away_t_away_goals             380 non-null int64\n",
+      "away_t_total_goals            380 non-null int64\n",
+      "away_t_away_goals_against     380 non-null int64\n",
+      "away_t_total_goals_against    380 non-null int64\n",
+      "away_t_away_wins              380 non-null int64\n",
+      "away_t_away_losses            380 non-null int64\n",
+      "away_t_away_draws             380 non-null int64\n",
+      "away_t_total_wins             380 non-null int64\n",
+      "away_t_total_losses           380 non-null int64\n",
+      "away_t_total_draws            380 non-null int64\n",
+      "dtypes: int64(27), object(4)\n",
+      "memory usage: 95.0+ KB\n"
+     ]
     }
    ],
    "source": [
-    "betting.columns.values"
+    "betting.info()"
    ]
   },
   {
