--- a/beatthebookies/notebooks/nico_explore.ipynb
+++ b/beatthebookies/notebooks/nico_explore.ipynb
@@ -9,44 +9,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'compute_accuracy' from 'beatthebookies.utils' (/Users/nico/.pyenv/versions/3.7.7/envs/lewagon/lib/python3.7/site-packages/beatthebookies/utils.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-4367d2b47ecb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbeatthebookies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbtd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mbeatthebookies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainer\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mbtt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.pyenv/versions/3.7.7/envs/lewagon/lib/python3.7/site-packages/beatthebookies/trainer.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# import warnings\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbeatthebookies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mbeatthebookies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcompute_accuracy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msimple_time_tracker\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute2_accuracy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute_precision\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute_recall\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute_f1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute_scores\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcompute_overall_scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmlflow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtracking\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mMlflowClient\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'compute_accuracy' from 'beatthebookies.utils' (/Users/nico/.pyenv/versions/3.7.7/envs/lewagon/lib/python3.7/site-packages/beatthebookies/utils.py)"
+     ]
+    }
+   ],
    "source": [
-    "import csv\n",
-    "\n",
-    "reader = csv.reader(open(\"/Applications/Career/Lewagon/project/E0-2.csv\"))\n",
-    "reader1 = csv.reader(open(\"/Applications/Career/Lewagon/project/E0.csv\"))\n",
-    "f = open(\"combined.csv\", \"w\")\n",
-    "writer = csv.writer(f)\n",
-    "\n",
-    "for row in reader:\n",
-    "    writer.writerow(row)\n",
-    "for row in reader1:\n",
-    "    writer.writerow(row)\n",
-    "f.close()"
+    "import beatthebookies.data as btd\n",
+    "import beatthebookies.trainer as btt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "get_betting_data 0.06\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = btd.get_betting_data()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>season</th>\n",
+       "      <th>stage</th>\n",
+       "      <th>date</th>\n",
+       "      <th>home_team</th>\n",
+       "      <th>away_team</th>\n",
+       "      <th>home_team_goal</th>\n",
+       "      <th>away_team_goal</th>\n",
+       "      <th>WHH</th>\n",
+       "      <th>WHD</th>\n",
+       "      <th>WHA</th>\n",
+       "      <th>home_w</th>\n",
+       "      <th>away_w</th>\n",
+       "      <th>draw</th>\n",
+       "      <th>profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>4701</td>\n",
+       "      <td>2015/2016</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2016-05-15 00:00:00</td>\n",
+       "      <td>Everton</td>\n",
+       "      <td>Norwich City</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>3.75</td>\n",
+       "      <td>4.50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>311</th>\n",
+       "      <td>4700</td>\n",
+       "      <td>2015/2016</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2016-05-15 00:00:00</td>\n",
+       "      <td>Chelsea</td>\n",
+       "      <td>Leicester City</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.30</td>\n",
+       "      <td>3.30</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>4699</td>\n",
+       "      <td>2015/2016</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2016-05-15 00:00:00</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Aston Villa</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.14</td>\n",
+       "      <td>7.50</td>\n",
+       "      <td>19.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>315</th>\n",
+       "      <td>4704</td>\n",
+       "      <td>2015/2016</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2016-05-15 00:00:00</td>\n",
+       "      <td>Southampton</td>\n",
+       "      <td>Crystal Palace</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>4.80</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>313</th>\n",
+       "      <td>4702</td>\n",
+       "      <td>2015/2016</td>\n",
+       "      <td>38</td>\n",
+       "      <td>2016-05-17 00:00:00</td>\n",
+       "      <td>Manchester United</td>\n",
+       "      <td>Bournemouth</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.67</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>4.75</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id     season  stage                 date          home_team  \\\n",
+       "312  4701  2015/2016     38  2016-05-15 00:00:00            Everton   \n",
+       "311  4700  2015/2016     38  2016-05-15 00:00:00            Chelsea   \n",
+       "310  4699  2015/2016     38  2016-05-15 00:00:00            Arsenal   \n",
+       "315  4704  2015/2016     38  2016-05-15 00:00:00        Southampton   \n",
+       "313  4702  2015/2016     38  2016-05-17 00:00:00  Manchester United   \n",
+       "\n",
+       "          away_team  home_team_goal  away_team_goal   WHH   WHD    WHA  \\\n",
+       "312    Norwich City               3               0  1.75  3.75   4.50   \n",
+       "311  Leicester City               1               1  2.30  3.30   3.10   \n",
+       "310     Aston Villa               4               0  1.14  7.50  19.00   \n",
+       "315  Crystal Palace               4               1  1.36  4.80   8.00   \n",
+       "313     Bournemouth               3               1  1.67  4.00   4.75   \n",
+       "\n",
+       "     home_w  away_w  draw  profit  \n",
+       "312       1       0     0     -10  \n",
+       "311       0       0     1     -10  \n",
+       "310       1       0     0     -10  \n",
+       "315       1       0     0     -10  \n",
+       "313       1       0     0     -10  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-aa1aee607ae0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'profit'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'profit'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'WHH'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'home_w'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'WHD'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'draw'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'WHA'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'away_w'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mbtb_profit_total\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'profit'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mbtb_profit\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'profit'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y_pred' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df['profit'] = -10\n",
+    "df.loc[(y_pred == y_true), 'profit'] = (((df['WHH']*df['home_w'])+(df['WHD']*df['draw'])+(df['WHA']*df['away_w'])) * 10) - 10\n",
+    "btb_profit_total = df['profit'].sum()\n",
+    "btb_profit = df['profit'].tail(1)"
+   ]
   },
   {
    "cell_type": "code",
