changed team names in fifarankings file to match those in csv

--- a/beatthebookies/notebooks/george_explore.ipynb
+++ b/beatthebookies/notebooks/george_explore.ipynb
@@ -1931,6 +1931,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Chris took over the webscrapping and smashed it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
