--- a/beatthebookies/notebooks/chris_explore.ipynb
+++ b/beatthebookies/notebooks/chris_explore.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-27T16:19:12.550859Z",
-     "start_time": "2020-08-27T16:19:12.534745Z"
+     "end_time": "2020-08-27T16:44:46.205911Z",
+     "start_time": "2020-08-27T16:44:46.190123Z"
     }
    },
    "outputs": [],
@@ -20,8 +20,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-27T16:19:14.583232Z",
-     "start_time": "2020-08-27T16:19:13.406462Z"
+     "end_time": "2020-08-27T16:44:48.020905Z",
+     "start_time": "2020-08-27T16:44:46.855864Z"
     }
    },
    "outputs": [],
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-27T16:30:11.666496Z",
-     "start_time": "2020-08-27T16:27:46.730922Z"
+     "end_time": "2020-08-27T16:47:32.485616Z",
+     "start_time": "2020-08-27T16:44:50.521349Z"
     }
    },
    "outputs": [
@@ -58,7 +58,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_csv_data 144.91\n"
+      "get_csv_data 161.94\n"
      ]
     }
    ],
@@ -68,11 +68,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-27T16:30:54.510998Z",
-     "start_time": "2020-08-27T16:30:54.453298Z"
+     "end_time": "2020-08-27T16:47:38.774552Z",
+     "start_time": "2020-08-27T16:47:38.713311Z"
     }
    },
    "outputs": [
@@ -553,7 +553,7 @@
        "4                    0                   0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,27 +564,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-27T16:09:09.203056Z",
-     "start_time": "2020-08-27T16:09:09.180891Z"
+     "end_time": "2020-08-27T16:48:13.355019Z",
+     "start_time": "2020-08-27T16:48:13.095915Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(4560, 47)"
-      ]
-     },
-     "execution_count": 144,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.shape"
+    "df.to_csv(\"../data/tempfile.csv\", index=False, encoding='utf-8-sig')"
    ]
   },
   {
