--- a/beatthebookies/notebooks/chris_explore.ipynb
+++ b/beatthebookies/notebooks/chris_explore.ipynb
@@ -2,14 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-31T10:32:03.304763Z",
-     "start_time": "2020-08-31T10:32:03.289210Z"
+     "end_time": "2020-08-31T15:05:52.330693Z",
+     "start_time": "2020-08-31T15:05:52.308682Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -17,11 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-31T12:23:03.769306Z",
-     "start_time": "2020-08-31T12:23:03.748761Z"
+     "end_time": "2020-08-31T15:05:54.542572Z",
+     "start_time": "2020-08-31T15:05:54.518976Z"
     }
    },
    "outputs": [],
@@ -46,11 +55,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-31T12:23:06.160844Z",
-     "start_time": "2020-08-31T12:23:06.077332Z"
+     "end_time": "2020-08-31T15:05:58.249847Z",
+     "start_time": "2020-08-31T15:05:58.167125Z"
     }
    },
    "outputs": [],
@@ -60,11 +69,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-31T12:23:22.987657Z",
-     "start_time": "2020-08-31T12:23:22.965098Z"
+     "end_time": "2020-08-31T16:03:19.378160Z",
+     "start_time": "2020-08-31T16:03:19.353548Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4180"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-31T15:06:00.671621Z",
+     "start_time": "2020-08-31T15:06:00.647776Z"
     }
    },
    "outputs": [
@@ -74,13 +108,91 @@
        "89"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "test_df.under_win.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-31T15:08:03.485544Z",
+     "start_time": "2020-08-31T15:08:03.461961Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test_df['winnings'] = (test_df['under_win'] * test_df['winning_odds'] * 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-31T15:13:17.676368Z",
+     "start_time": "2020-08-31T15:13:17.654261Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3572.8"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.winnings.sum() - 890"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-31T15:13:58.529442Z",
+     "start_time": "2020-08-31T15:13:58.466677Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df['winnings'] = (df['under_win'] * df['winning_odds'] * 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-31T15:14:26.513937Z",
+     "start_time": "2020-08-31T15:14:26.493315Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32665.199999999997"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.winnings.sum() - (970*10)"
    ]
   },
   {
