--- a/beatthebookies/notebooks/george_explore.ipynb
+++ b/beatthebookies/notebooks/george_explore.ipynb
@@ -353,14 +353,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Day Two - Comparing bets (2015/2016)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "The goal of today is to find a baseline betting profit and loss for our model to compare with.\n",
     "\n",
@@ -378,7 +382,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Import the betting data"
@@ -488,7 +493,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Profit from betting on favourite"
@@ -543,7 +549,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Profit betting on Underdog"
@@ -587,7 +594,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Profit from Home / Draw / Away"
@@ -684,7 +692,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Cumulative profit totals for each strategey"
@@ -741,7 +750,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Reorganise methods into functions to apply to all the data"
    ]
@@ -749,7 +760,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# psuedo code\n",
@@ -765,7 +778,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def pick_the_fav(X, season, bet=10):\n",
@@ -785,7 +800,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def pick_the_dog(X, season, bet=10):\n",
@@ -805,7 +822,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def always_home(X, season, bet=10):\n",
@@ -821,7 +840,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def always_draw(X, season, bet=10):\n",
@@ -837,7 +858,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "def always_away(X, season, bet=10):\n",
@@ -853,7 +876,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### test functions"
@@ -57272,7 +57296,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Betting Strategy profit graphs 2019/2020"
    ]
@@ -57280,7 +57306,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import warnings\n",
@@ -57290,7 +57318,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -58230,7 +58260,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# create an empty dataframe for betting strategies\n",
@@ -58241,7 +58273,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# if fav wins \n",
@@ -58254,7 +58288,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "profits['fav_profit'] = pl2019['fav_profit']"
@@ -58263,7 +58299,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# under dog \n",
@@ -58276,7 +58314,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "profits.underdog_profit = pl2019.dog_profit"
@@ -58285,7 +58325,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# home \n",
@@ -58296,7 +58338,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "pl2019['draw_profit'] = -10\n",
@@ -58306,7 +58350,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "pl2019['away_profit'] = -10\n",
@@ -58316,7 +58362,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "profits.home_profit = pl2019.home_profit\n",
@@ -58328,7 +58376,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "profits.reset_index(drop=True, inplace=True)"
@@ -58337,7 +58387,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
@@ -58347,7 +58399,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# create a cumulaitve total for each strategy in the season\n",
@@ -58361,7 +58415,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -62976,7 +63032,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -63014,6 +63072,72 @@
     "plt.ylabel(\"Profit/Loss\")\n",
     "plt.xlabel(\"Game Week\")\n",
     "plt.title(\"Beat the Bookies Profit/Loss Projection for 2019 Season\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Playing Around with Neural Networks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['season', 'date', 'home_team', 'away_team', 'home_team_goal',\n",
+       "       'away_team_goal', 'FTR', 'HTHG', 'HTAG', 'HTR', 'Referee',\n",
+       "       'home_shots', 'away_shots', 'home_shots_ot', 'away_shots_ot',\n",
+       "       'home_fouls', 'away_fouls', 'home_corn', 'away_corn', 'home_yel',\n",
+       "       'away_yel', 'home_red', 'away_red', 'WHH', 'WHD', 'WHA', 'H_ATT',\n",
+       "       'H_MID', 'H_DEF', 'H_OVR', 'A_ATT', 'A_MID', 'A_DEF', 'A_OVR',\n",
+       "       'home_w', 'draw', 'away_w', 'winning_odds', 'home_t_home_goals',\n",
+       "       'home_t_home_goals_against', 'home_t_home_shots',\n",
+       "       'home_t_home_shots_ot', 'home_t_home_shots_against',\n",
+       "       'home_t_home_shots_ot_against', 'home_t_home_fouls',\n",
+       "       'home_t_home_fouls_against', 'home_t_home_corn',\n",
+       "       'home_t_home_corn_against', 'home_t_home_yel',\n",
+       "       'home_t_home_yel_against', 'home_t_home_red',\n",
+       "       'home_t_home_red_against', 'home_t_home_wins',\n",
+       "       'home_t_home_losses', 'home_t_home_draws', 'away_t_away_goals',\n",
+       "       'away_t_away_goals_against', 'away_t_away_shots',\n",
+       "       'away_t_away_shots_ot', 'away_t_away_shots_against',\n",
+       "       'away_t_away_shots_ot_against', 'away_t_away_fouls',\n",
+       "       'away_t_away_fouls_against', 'away_t_away_corn',\n",
+       "       'away_t_away_corn_against', 'away_t_away_yel',\n",
+       "       'away_t_away_yel_against', 'away_t_away_red',\n",
+       "       'away_t_away_red_against', 'away_t_away_wins',\n",
+       "       'away_t_away_losses', 'away_t_away_draws',\n",
+       "       'home_t_prev_home_matches', 'away_t_prev_away_matches', 'stage',\n",
+       "       'home_t_total_goals', 'home_t_total_goals_against',\n",
+       "       'home_t_total_shots', 'home_t_total_shots_against',\n",
+       "       'home_t_total_shots_ot', 'home_t_total_shots_ot_against',\n",
+       "       'home_t_total_fouls', 'home_t_total_fouls_against',\n",
+       "       'home_t_total_corn', 'home_t_total_corn_against',\n",
+       "       'home_t_total_yel', 'home_t_total_yel_against', 'home_t_total_red',\n",
+       "       'home_t_total_red_against', 'home_t_total_wins',\n",
+       "       'home_t_total_losses', 'home_t_total_draws', 'away_t_total_goals',\n",
+       "       'away_t_total_goals_against', 'away_t_total_shots',\n",
+       "       'away_t_total_shots_against', 'away_t_total_shots_ot',\n",
+       "       'away_t_total_shots_ot_against', 'away_t_total_fouls',\n",
+       "       'away_t_total_fouls_against', 'away_t_total_corn',\n",
+       "       'away_t_total_corn_against', 'away_t_total_yel',\n",
+       "       'away_t_total_yel_against', 'away_t_total_red',\n",
+       "       'away_t_total_red_against', 'away_t_total_wins',\n",
+       "       'away_t_total_losses', 'away_t_total_draws'], dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "premier.columns.values"
    ]
   },
   {
