added to notebook

--- a/beatthebookies/notebooks/george_new_notebook.ipynb
+++ b/beatthebookies/notebooks/george_new_notebook.ipynb
@@ -4151,7 +4151,9 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -6092,7 +6094,7 @@
     }
    ],
    "source": [
-    "convert"
+    "convert ## appears to be predicting no upsets in the season - need to balance the dataset"
    ]
   },
   {
