added predictions and heroku

--- a/beatthebookies/notebooks/chris_explore.ipynb
+++ b/beatthebookies/notebooks/chris_explore.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-31T15:05:52.330693Z",
-     "start_time": "2020-08-31T15:05:52.308682Z"
+     "end_time": "2020-09-01T16:57:15.756201Z",
+     "start_time": "2020-09-01T16:57:15.740158Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -26,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-01T11:01:52.152131Z",
-     "start_time": "2020-09-01T11:01:50.897020Z"
+     "end_time": "2020-09-01T16:57:18.268847Z",
+     "start_time": "2020-09-01T16:57:17.185473Z"
     }
    },
    "outputs": [],
@@ -51,6 +42,296 @@
    "metadata": {},
    "source": [
     "# Exploratory notebook"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:26.004243Z",
+     "start_time": "2020-09-01T16:57:25.981583Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "api_url = \"http://127.0.0.1:8080/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:27.470125Z",
+     "start_time": "2020-09-01T16:57:27.443937Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "from random import randint\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:32.362998Z",
+     "start_time": "2020-09-01T16:57:32.326693Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'respone': 'OK'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r = requests.get(api_url)\n",
+    "r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:41.168476Z",
+     "start_time": "2020-09-01T16:57:41.141492Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cols = ['H_ATT', 'A_ATT', 'H_MID', 'A_MID', 'H_DEF', 'A_DEF', 'H_OVR', 'A_OVR',\n",
+    "        'home_t_total_wins','away_t_total_wins', 'stage','home_t_total_goals','away_t_total_goals',\n",
+    "        'home_t_home_goals','home_t_home_goals_against','away_t_away_goals','away_t_away_goals_against',\n",
+    "        'home_t_prev_home_matches', 'away_t_prev_away_matches', 'home_t_total_shots', 'home_t_total_shots_ot',\n",
+    "        'away_t_total_shots', 'away_t_total_shots_ot', 'home_t_total_goals_against','away_t_total_goals_against', 'WHH',\n",
+    "        'WHA', 'WHD', 'home_w', 'away_w', 'draw', 'winning_odds']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:46.643904Z",
+     "start_time": "2020-09-01T16:57:46.620335Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "game = {}\n",
+    "for col in cols:\n",
+    "    game[col] = randint(1,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:48.200125Z",
+     "start_time": "2020-09-01T16:57:48.174612Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'H_ATT': 20,\n",
+       " 'A_ATT': 16,\n",
+       " 'H_MID': 2,\n",
+       " 'A_MID': 16,\n",
+       " 'H_DEF': 10,\n",
+       " 'A_DEF': 19,\n",
+       " 'H_OVR': 15,\n",
+       " 'A_OVR': 8,\n",
+       " 'home_t_total_wins': 15,\n",
+       " 'away_t_total_wins': 5,\n",
+       " 'stage': 15,\n",
+       " 'home_t_total_goals': 13,\n",
+       " 'away_t_total_goals': 4,\n",
+       " 'home_t_home_goals': 15,\n",
+       " 'home_t_home_goals_against': 17,\n",
+       " 'away_t_away_goals': 7,\n",
+       " 'away_t_away_goals_against': 6,\n",
+       " 'home_t_prev_home_matches': 1,\n",
+       " 'away_t_prev_away_matches': 5,\n",
+       " 'home_t_total_shots': 19,\n",
+       " 'home_t_total_shots_ot': 5,\n",
+       " 'away_t_total_shots': 7,\n",
+       " 'away_t_total_shots_ot': 19,\n",
+       " 'home_t_total_goals_against': 1,\n",
+       " 'away_t_total_goals_against': 14,\n",
+       " 'WHH': 4,\n",
+       " 'WHA': 14,\n",
+       " 'WHD': 19,\n",
+       " 'home_w': 17,\n",
+       " 'away_w': 4,\n",
+       " 'draw': 15,\n",
+       " 'winning_odds': 2}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "game"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T15:27:02.549720Z",
+     "start_time": "2020-09-01T15:27:02.524005Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(game)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:54.081096Z",
+     "start_time": "2020-09-01T16:57:53.969601Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "r = requests.get(api_url + \"predict_match\", json=game) #,headers = {'content-type': 'application/json', 'Accept-Charset': 'UTF-8'})\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T16:57:57.791211Z",
+     "start_time": "2020-09-01T16:57:57.766726Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'predictions': '1'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bb"
    ]
   },
   {
