added streamlit picker

--- a/beatthebookies/notebooks/chris_explore.ipynb
+++ b/beatthebookies/notebooks/chris_explore.ipynb
@@ -60,17 +60,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-01T16:57:27.470125Z",
-     "start_time": "2020-09-01T16:57:27.443937Z"
+     "end_time": "2020-09-01T21:56:41.828750Z",
+     "start_time": "2020-09-01T21:56:41.808442Z"
     }
    },
    "outputs": [],
    "source": [
     "import requests\n",
-    "from random import randint\n"
+    "from random import randint, uniform\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T21:58:56.548133Z",
+     "start_time": "2020-09-01T21:58:56.518566Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "round(uniform(1,2),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-01T21:59:15.595497Z",
+     "start_time": "2020-09-01T21:59:15.564806Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "odds = pd.DataFrame({'Home Win': round(uniform(1,2),2), 'Away Win': round(uniform(1,10),2), 'Draw': round(uniform(1,5),2) },index=[0])\n"
    ]
   },
   {
