--- a/beatthebookies/notebooks/chris_explore.ipynb
+++ b/beatthebookies/notebooks/chris_explore.ipynb
@@ -17,11 +17,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T09:47:18.234581Z",
-     "start_time": "2020-09-03T09:47:17.050751Z"
+     "end_time": "2020-09-03T14:32:23.319006Z",
+     "start_time": "2020-09-03T14:32:22.092190Z"
     }
    },
    "outputs": [],
@@ -46,11 +46,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-03T09:47:22.075858Z",
-     "start_time": "2020-09-03T09:47:20.944066Z"
+     "end_time": "2020-09-03T14:32:25.451420Z",
+     "start_time": "2020-09-03T14:32:24.482438Z"
     }
    },
    "outputs": [
@@ -58,12 +58,138 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "get_data 1.06\n"
+      "get_data 0.97\n"
      ]
     }
    ],
    "source": [
     "df, test_df = btb.get_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-03T14:33:48.685523Z",
+     "start_time": "2020-09-03T14:33:48.679614Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "32    116\n",
+       "30    115\n",
+       "25    114\n",
+       "1     114\n",
+       "5     114\n",
+       "15    113\n",
+       "28    113\n",
+       "7     113\n",
+       "22    113\n",
+       "17    112\n",
+       "3     112\n",
+       "34    112\n",
+       "13    112\n",
+       "9     112\n",
+       "19    112\n",
+       "20    111\n",
+       "37    111\n",
+       "36    111\n",
+       "11    111\n",
+       "38    110\n",
+       "23    110\n",
+       "27    110\n",
+       "14    109\n",
+       "12    108\n",
+       "33    108\n",
+       "24    108\n",
+       "10    108\n",
+       "18    108\n",
+       "8     108\n",
+       "16    107\n",
+       "35    107\n",
+       "26    107\n",
+       "4     107\n",
+       "6     106\n",
+       "21    105\n",
+       "29    105\n",
+       "2     105\n",
+       "31    103\n",
+       "Name: stage, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.stage.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-09-03T14:32:48.549718Z",
+     "start_time": "2020-09-03T14:32:48.543730Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19    12\n",
+       "22    12\n",
+       "24    11\n",
+       "10    10\n",
+       "15    10\n",
+       "14    10\n",
+       "13    10\n",
+       "12    10\n",
+       "11    10\n",
+       "9     10\n",
+       "17    10\n",
+       "8     10\n",
+       "7     10\n",
+       "6     10\n",
+       "5     10\n",
+       "4     10\n",
+       "3     10\n",
+       "2     10\n",
+       "16    10\n",
+       "38    10\n",
+       "29    10\n",
+       "37    10\n",
+       "36    10\n",
+       "35    10\n",
+       "34    10\n",
+       "33    10\n",
+       "32    10\n",
+       "31    10\n",
+       "30    10\n",
+       "1     10\n",
+       "28    10\n",
+       "27    10\n",
+       "26    10\n",
+       "25    10\n",
+       "20    10\n",
+       "18     9\n",
+       "23     8\n",
+       "21     8\n",
+       "Name: stage, dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_df.stage.value_counts()"
    ]
   },
   {
